# PyBayesAB

./: .gitignore  README.md  demo.ipynb  helper.py  plot_functions.py  pyproject.toml
conj_priors/: Bernoulli.py  Binomial.py  Category.py  Exponential.py  Multivariate.py  Normal.py  Poisson.py
src/: Bayesian_functions.py  Bernoulli.py  Category.py  Exponential.py  Multivariate.py  Normal.py  Poisson.py  helper.py  plot_functions.py
src/PyBayesAB/: __init__.py  base_model.py  base_plot.py  bayesian_functions.py  config.py  helper.py  mcmc.py  plot_functions.py
src/PyBayesAB/conjugated_priors/: bernoulli.py  normal.py  pareto.py  poisson.py
src/PyBayesAB/distribution/: bernoulli.py  exponential.py  gamma.py  multinomial.py  normal.py  poisson.py  template.py
src/conjugated_priors/: Bernoulli.py  Binomial.py  Category.py  Exponential.py  Multivariate.py  Normal.py  Poisson.py  gamma.py  multinomial.py  pareto.py
test/: demo.ipynb
