[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Bayeian_ABtest_package_Milaim_Kas"
version = "0.0.1"
authors = [
  { name="Milaim Kas", email="milaim.kas@gmail.com" },
]
description = "Package for Bayesian analysis of AB test and data with animation and plots"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"